# ai-analytics

./: .gitattributes  AI-Analytics-SaaS-Plan.html  Dockerfile.next  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
engine/: Dockerfile  forecaster.py  main.py  profiler.py  requirements.txt  sql_engine.py
engine/native/: CMakeLists.txt  bindings.cpp  stats.cpp
prisma/: schema.prisma
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
src/app/(admin)/: layout.tsx
src/app/(admin)/admin/: page.tsx
src/app/(app)/: layout.tsx  loading.tsx
src/app/(app)/analyze/: page.tsx
src/app/(app)/billing/: page.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/datasets/: page.tsx
src/app/(app)/reports/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/forgot-password/: page.tsx
src/app/(marketing)/: layout.tsx  page.tsx
src/components/auth/: login-form.tsx  signup-form.tsx
src/components/marketing/: cta.tsx  features.tsx  hero.tsx  pricing-cards.tsx  testimonials.tsx
src/components/shared/: email-banner.tsx  footer.tsx  gtm.tsx  mobile-sidebar.tsx  navbar.tsx  sidebar.tsx  theme-toggle.tsx  user-menu.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  progress.tsx  skeleton.tsx  sonner.tsx  table.tsx  textarea.tsx
src/hooks/: use-analytics.ts  use-subscription.ts
src/lib/: ai.ts  auth.ts  email.ts  rate-limit.ts  stripe.ts  upload.ts
src/lib/analytics/: events.ts  gtm.ts  posthog.ts  provider.tsx
src/types/: index.ts  next-auth.d.ts
(+27 files in other folders)
